examples/test/testpolicy18207.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18207
  namespace: namespace15
spec:
  podSelector:
    matchLabels:
      key29: value2
      key42: value14
      key6: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value45
          key46: value22
          key37: value0
      podSelector:
        matchLabels:
          key9: value8
          key15: value12
